fix nav bar link color on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -340,7 +340,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: #333;
     }
   }
 }
